# base_telegram_bot_template

./: .dockerignore  .env.dist  .gitignore  Dockerfile  alembic.ini  compose.yml  pyproject.toml
scripts/: entrypoint.sh
src/: bot.py  config.py  main.py
src/database/: base.py  engine.py  fields.py  types.py  uow.py
src/database/dao/: user_dao.py
src/database/migrations/: env.py
src/database/migrations/versions/: 2025_12_01_1116-56ec05931fe8.py
src/database/models/: user.py
src/dependencies/: __init__.py  ioc.py
src/handlers/: callback.py  commands.py
src/tskiq/: __init__.py  broker.py  tasks.py
src/utils/: __init__.py  logging.py  string.py
