[project]
name = "telegram_bot_template"
version = "0.1.0"
description = "Telegram Bot Template"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.21.0",
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "dishka>=1.6.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytz>=2025.2",
    "redis>=5.3.0",
    "sqlalchemy[asyncio]>=2.0.41",
    "taskiq>=0.11.17",
    "taskiq-redis>=1.0.9",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
